# NRG-Eadgebraker

./: CMakeLists.txt  README.md
Commands/: compress.txt  decompress.txt
data/: ASCIIclers.txt  ASCIIvertices.txt  fgdj.fbx  kleinbottle.dae  untitled.gltf
data/ASCII/: 0_clers.txt  0_dummy.txt  0_vertices.txt  1_clers.txt  1_vertices.txt  2_vertices.txt  3_vertices.txt
data/OFF/: 2SCube.off  4SCube.off  bot.off  man1.off  nonMain1.off  nonMain2.off  nonMain3.off  seperatedCubes.off  seperatedCubes_copy.off  simpleMain1.off  simpleMain2.off  strip1.off
data/OV/: 2Handle.ov  9HandleTorus.ov  Cow.ov
src/: EBBinStreamIO.cpp  EBBinStreamIO.h  EBCLoadFiles.cpp  EBCSaveFiles.cpp  EBCompression.cpp  EBDCLoadFiles.cpp  EBDCSaveFiles.cpp  EBDecompression.cpp  EBLabelStream.cpp  EBLabelStream.h  EBUtils.cpp  EBUtils.h  EBdatatypes.h  EdgeBrakerCompress.cpp  EdgeBreakerCompress.h  EdgebreakerCompress.cpp  EdgebreakerDecompress.h  HEPolMesh.cpp  HEPolMesh.h  main.cpp
